2011-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Improved obsolete cache thumbnails removing.

2011-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.xcf: Updated a help image.

2011-05-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4-b2 release.
	* liststore.py (RecentQueue.pop): Improved obsolete cache files
	  removing.

2011-05-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/__init__.py: Fixed a bug.

2011-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4-b1 release.

2011-05-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/folder.py, gphotoframe.ui: Added new option for 'Exclude
	  hidden files and folders'.

2011-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/folder.py (PhotoSourceOptionsDirUI): Fixed a chckbutton
	  sensitiveness.

2011-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* uk.po: Added Ukrainian translation.  Thanks Sergiy Gavrylov!

2011-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* sv.po: Added new translation.  Thanks Daniel Nylander!

2011-04-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.3 release.

2011-04-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py, liststore.py: Fixed a cursor
	  position on the photo source treeview.
	* image/tooltip.py: Added some argument to tooltips.

2011-04-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py: Added sort by 'source' column.

2011-04-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr/__init__.py: Added new gconf keys:
	  disable_delete_post and enable_ban_liked.

2011-04-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe.schemas.in: Updated schemas.
	* shotwell.py: Added support for new shotwell tag database scheme.
	* liststore.py: Added sorting photo sources.

2011-04-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*: Doesn't share private photo.
	* utils/urlgetautoproxy.py: Added urlget_with_autoproxy.